--- a/site/hugo.toml
+++ b/site/hugo.toml
@@ -26,16 +26,22 @@ images = ["img/og-image.jpg"]
 	weight = 2
 
 	[[menu.primary]]
+	identifier = "grants"
+	name = "Grants"
+	url = "/grants"
+	weight = 3
+
+	[[menu.primary]]
 	identifier = "resources"
 	name = "Resources"
 	url = "/resources"
-	weight = 3
+	weight = 4
 
 	[[menu.primary]]
 	identifier = "about"
 	name = "About Us"
 	url = "/about"
-	weight = 4
+	weight = 5
 
 		[[menu.primary]]
 		parent = "about"
@@ -62,4 +68,4 @@ images = ["img/og-image.jpg"]
 	identifier = "contact"
 	name = "Contact"
 	url = "/contact"
-	weight = 5
+	weight = 6
