added about page

--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -65,6 +65,20 @@ collections: # A list of collections the CMS should be able to edit
               - label: "Image"
                 name: "image"
                 widget: "image"
+      - file: "site/content/about/_index.md"
+        label: "About Page"
+        name: "about"
+        fields:
+          - {label: Title, name: title, widget: string}
+          - {label: Intro, name: intro, widget: text}
+          - {label: Image, name: image, widget: image}
+          - {label: Body, name: body, widget: markdown}
+          - label: Values
+              name: values
+              widget: list
+              fields:
+                - {label: Text, name: text, widget: markdown}
+                - {label: Image, name: imageUrl, widget: image}
       - file: "site/content/grants/_index.md"
         label: "Grants Page"
         name: "grants"
